tests/errors/lex_binary.java
public class lex_binary {
	public static float b = 0b11;
}
